--- a/resources/assets/client/scss/pages/_shop.scss
+++ b/resources/assets/client/scss/pages/_shop.scss
@@ -81,6 +81,7 @@
       width: 0;
       height: 0;
       opacity: 0;
+      display: none;
 
       &:checked + label {
         font-weight: 500;
